@@ -14,19 +14,15 @@ public class CorsConfig {
 
     @Bean
     public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-
-        // Create a CORS configuration object
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true); // Allow credentials such as cookies or Authorization headers
-        config.setAllowedOrigins(List.of("http://localhost:4200")); // List specific allowed origins
-        config.addAllowedHeader("*"); // Allow all headers
-        config.addAllowedMethod("*"); // Allow all HTTP methods (GET, POST, PUT, DELETE, etc.)
-        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // Expose necessary headers
+        config.setAllowCredentials(true);
+        config.setAllowedOrigins(List.of("http://localhost:4200"));
+        config.addAllowedHeader("*");
+        config.addAllowedMethod("*");
 
-        // Apply the configuration to all endpoints
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return new CorsFilter(source);
     }
+
 }
